<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MovieTime</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">392752807576438</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_movie_list">MovieListActivity</string>
    <string name="title_activity_msg">MsgActivity</string>
    <string name="phoneNum">Enter Phone Number</string>
    <string name="msg">Write Message</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_save">SaveActivity</string>
    <string name="movietitle">Movie Ttile</string>
    <string name="setdate">Set Date</string>
    <string name="settime">Set Time</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="logout">Logout</string>
    <string name="display">Display Movies</string>
    <string name="home">Home</string>
    <string name="title_activity_display_detail">DisplayDetailActivity</string>
    <string name="search">Search</string>
    <string name="enterName">Enter Name</string>
    <string name="title_activity_watch">Watch</string>
    <string name="txtDate">Date</string>
    <string name="txtTime">Time</string>
    <string name="prompt_date">Pick the Date and Time!</string>
    <string name="strReserve">Reserve!</string>
    <string name="strMovieName">Movie:</string>
    <string name="hintMovieName">movieID name</string>
    <string name="title_activity_detail_row">DetailRowActivity</string>
    <string name="title_activity_like_dislike">LikeDislikeActivity</string>
    <string name="sendMsg">Send Messgae</string>

</resources>
